# league-table

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/league_table/: flask_app.py  leader_board.py
src/league_table/templates/: index.html
src/scripts/: README.md  produce_table.py
tests/: test_leader_board.py
tests/bdd/: group_table.feature  test_for_illustration.py  test_group_table_reflect_match_result.py  test_only_for_illustration_with_live_app.py
tests/unit/: test_leader_board.py
