[tool.poetry]
name = "league-table"
version = "0.0.1"
license = "MIT license"
readme = 'README.md'
description = "Coding challenge"
authors = ["Samuel Twum"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
packages = [
    { include = "league_table", from = "src" }
]
include = [
    { path = 'tests'},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint = "^2.6.0"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
